Extending grammar to support more labels and tadnoredundant impl.